--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^6.0",
         "laravel/passport": "^7.3",
-        "laravel/tinker": "^1.0"
+        "laravel/scout": "^8.0",
+        "laravel/tinker": "^1.0",
+        "yab/laravel-scout-mysql-driver": "^3.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
